// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadAssessmentDialog should not show when isOpen is set to false 1`] = `
<DocumentFragment>
  <mock-changeassessmentdialog
    deps="[object Object]"
    dialogcontenttitle="Assessment in progress"
    dialogfirsttext="[object Object]"
    dialognotetext="If 'Continue previous' is selected, the assessment selected will not be loaded."
    dialogwarningtext="If 'Load assessment’ is selected, all previous progress will be lost."
    divid="load-assessment-dialog-description"
    isopen="false"
    leftbuttontext="Continue previous"
    prevtab="[object Object]"
    rightbuttondataautomationid="load-assessment-dialog-load-button"
    rightbuttonstyle="loadButton"
    rightbuttontext="Load assessment"
    subtitleariaid="load-assessment-dialog-description"
  />
</DocumentFragment>
`;

exports[`LoadAssessmentDialog should show when isOpen is set to true 1`] = `
<DocumentFragment>
  <mock-changeassessmentdialog
    deps="[object Object]"
    dialogcontenttitle="Assessment in progress"
    dialogfirsttext="[object Object]"
    dialognotetext="If 'Continue previous' is selected, the assessment selected will not be loaded."
    dialogwarningtext="If 'Load assessment’ is selected, all previous progress will be lost."
    divid="load-assessment-dialog-description"
    isopen="true"
    leftbuttontext="Continue previous"
    prevtab="[object Object]"
    rightbuttondataautomationid="load-assessment-dialog-load-button"
    rightbuttonstyle="loadButton"
    rightbuttontext="Load assessment"
    subtitleariaid="load-assessment-dialog-description"
  />
</DocumentFragment>
`;
